--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,11 +3,21 @@ pipeline {
 
     environment {
         DOCKER_REGISTRY = "docker.io"  
-        IMAGE_NAME = "spring-petclinic"
-        IMAGE_TAG = "latest"  
+        IMAGE_NAME = "obrenovicm/main/spring-petclinic"
+        IMAGE_TAG = "latest"
+        DOCKER_TLS_VERIFY = '0'  
+        DOCKER_HOST = 'tcp://docker:2376'
+        DOCKER_CERT_PATH = '/certs/client'
     }
 
     stages {
+
+        stage('Checkout SCM') {
+            steps {
+                checkout scm
+            }
+        }
+
         stage('Build Docker Image') {
             steps {
                 script {
